src/example-awkparser/awk/SENTENCE.java
/* SENTENCE.java */
/* Generated By:JavaCC: Do not edit this line. SENTENCE.java */
package awk;

public class SENTENCE implements SENTENCEConstants {
  public static void main(String args []) throws ParseException  {
    SENTENCE sentence = new SENTENCE(System.in);
    while (true) {
      System.out.println("Lendo do teclado...");
      try {
                sentence.Parse();
      }
      catch (Exception e) {
        System.out.println("Erro sint\u00e1tico.");
        System.out.println(e.getMessage());
        break;
      }
      catch (Error e) {
        System.out.println("Erro l\u00e9xico.");
        System.out.println(e.getMessage());
        break;
      }
    }
  }

  final public void Parse() throws ParseException, ParseException, TokenMgrError {
    trace_call("Parse");
    try {Token t;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CONTINUE:{
        t = jj_consume_token(CONTINUE);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case EXIT:{
        t = jj_consume_token(EXIT);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case RETURN:{
        t = jj_consume_token(RETURN);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case WHILE:{
        t = jj_consume_token(WHILE);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case BREAK:{
        t = jj_consume_token(BREAK);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case ELSE:{
        t = jj_consume_token(ELSE);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case NEXT:{
        t = jj_consume_token(NEXT);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case DELETE:{
        t = jj_consume_token(DELETE);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case FOR:{
        t = jj_consume_token(FOR);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case IF:{
        t = jj_consume_token(IF);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case DO:{
        t = jj_consume_token(DO);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case IN:{
        t = jj_consume_token(IN);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case PRINT:{
        t = jj_consume_token(PRINT);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case GETLINE:{
        t = jj_consume_token(GETLINE);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case PADRAO_ID:{
        t = jj_consume_token(PADRAO_ID);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case CIFRAO:{
        t = jj_consume_token(CIFRAO);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case OP_RELACIONAL:{
        t = jj_consume_token(OP_RELACIONAL);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case OP_ATRIBUICAO:{
        t = jj_consume_token(OP_ATRIBUICAO);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case FUNCAO_MAT:{
        t = jj_consume_token(FUNCAO_MAT);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case FUNCAO_IO:{
        t = jj_consume_token(FUNCAO_IO);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case FIM:{
        t = jj_consume_token(FIM);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case DIGITO:{
        t = jj_consume_token(DIGITO);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case LETRA:{
        t = jj_consume_token(LETRA);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case STRING:{
        t = jj_consume_token(STRING);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case NUMERO:{
        t = jj_consume_token(NUMERO);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case LISTA_VAR:{
        t = jj_consume_token(LISTA_VAR);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case VAR:{
        t = jj_consume_token(VAR);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case VAR_ARRAY:{
        t = jj_consume_token(VAR_ARRAY);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case VAR_BODY:{
        t = jj_consume_token(VAR_BODY);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case ABRE_PARENTESES:{
        t = jj_consume_token(ABRE_PARENTESES);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case FECHA_PARENTESES:{
        t = jj_consume_token(FECHA_PARENTESES);
System.out.println("@("+ t.beginLine+","+t.beginColumn+")\t"+t.toString());
        break;
        }
      case 0:{
        jj_consume_token(0);
System.exit(0);
Programa();
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("Parse");
    }
  }

  final public void Programa() throws ParseException {
    trace_call("Programa");
    try {
      Comandos();
    } finally {
      trace_return("Programa");
    }
  }

  final public void Comandos() throws ParseException {
    trace_call("Comandos");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PADRAO_ID:
      case 36:{
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PADRAO_ID:{
          jj_consume_token(PADRAO_ID);
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          ;
        }
        jj_consume_token(36);
        Acao();
        jj_consume_token(37);
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case CIFRAO:
          case ABRE_PARENTESES:
          case STRING:
          case NUMERO:
          case VAR:
          case 41:
          case 46:
          case 51:
          case 52:{
            ;
            break;
            }
          default:
            jj_la1[2] = jj_gen;
            break label_1;
          }
          Padrao();
          jj_consume_token(36);
          Acao();
          jj_consume_token(37);
        }
      }
    } finally {
      trace_return("Comandos");
    }
  }

  final public void Padrao() throws ParseException {
    trace_call("Padrao");
    try {
      if (jj_2_1(100)) {
        Exp_relacional();
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 38:
          case 39:
          case 40:{
            ;
            break;
            }
          default:
            jj_la1[4] = jj_gen;
            break label_2;
          }
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 38:{
            jj_consume_token(38);
            break;
            }
          case 39:{
            jj_consume_token(39);
            break;
            }
          case 40:{
            jj_consume_token(40);
            break;
            }
          default:
            jj_la1[5] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          Exp_relacional();
        }
      } else if (jj_2_2(100)) {
        jj_consume_token(ABRE_PARENTESES);
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 41:{
            ;
            break;
            }
          default:
            jj_la1[6] = jj_gen;
            break label_3;
          }
          jj_consume_token(41);
        }
        Exp_relacional();
        jj_consume_token(FECHA_PARENTESES);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case CIFRAO:
        case ABRE_PARENTESES:
        case STRING:
        case NUMERO:
        case VAR:
        case 41:
        case 46:
        case 51:
        case 52:{
          Expressao();
          jj_consume_token(42);
          Expressao();
          jj_consume_token(43);
          Exp_atribuicao();
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("Padrao");
    }
  }

  final public void Acao() throws ParseException {
    trace_call("Acao");
    try {
      Declaracao();
    } finally {
      trace_return("Acao");
    }
  }

  final public void Declaracao() throws ParseException {
    trace_call("Declaracao");
    try {
      if (jj_2_3(100)) {
        D_Expressao();
      } else if (jj_2_4(100)) {
        D_funcao();
      } else if (jj_2_5(100)) {
        D_lista();
      } else if (jj_2_6(100)) {
        D_if();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case WHILE:
        case FOR:
        case DO:
        case VAR:{
          D_loop();
          break;
          }
        case CONTINUE:
        case RETURN:
        case BREAK:{
          D_control();
          break;
          }
        case 36:{
          jj_consume_token(36);
          D_lista();
          jj_consume_token(37);
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("Declaracao");
    }
  }

  final public void D_Expressao() throws ParseException {
    trace_call("D_Expressao");
    try {
      Expressao();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FIM:{
        jj_consume_token(FIM);
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        ;
      }
    } finally {
      trace_return("D_Expressao");
    }
  }

  final public void D_funcao() throws ParseException {
    trace_call("D_funcao");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EXIT:{
        jj_consume_token(EXIT);
        jj_consume_token(ABRE_PARENTESES);
        Expressao();
        jj_consume_token(FECHA_PARENTESES);
        break;
        }
      case DELETE:{
        jj_consume_token(DELETE);
        jj_consume_token(VAR_ARRAY);
        break;
        }
      case FUNCAO_MAT:{
        D_funcao_matematica();
        break;
        }
      case PRINT:
      case GETLINE:{
        D_funcao_io();
        break;
        }
      case FUNCAO_IO:{
        D_funcao_string();
        break;
        }
      case NEXT:{
        jj_consume_token(NEXT);
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(FIM);
    } finally {
      trace_return("D_funcao");
    }
  }

  final public void D_if() throws ParseException {
    trace_call("D_if");
    try {
      jj_consume_token(IF);
      jj_consume_token(ABRE_PARENTESES);
      Expressao();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IN:{
        jj_consume_token(IN);
        jj_consume_token(VAR_ARRAY);
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      jj_consume_token(FECHA_PARENTESES);
      Declaracao();
      if (jj_2_7(100)) {
        jj_consume_token(ELSE);
        Declaracao();
      } else {
        ;
      }
    } finally {
      trace_return("D_if");
    }
  }

  final public void D_loop() throws ParseException {
    trace_call("D_loop");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case WHILE:{
        jj_consume_token(WHILE);
        jj_consume_token(ABRE_PARENTESES);
        Expressao();
        jj_consume_token(FECHA_PARENTESES);
        Declaracao();
        break;
        }
      case DO:{
        jj_consume_token(DO);
        Declaracao();
        jj_consume_token(WHILE);
        jj_consume_token(ABRE_PARENTESES);
        Expressao();
        jj_consume_token(FECHA_PARENTESES);
        break;
        }
      case FOR:{
        jj_consume_token(FOR);
        jj_consume_token(ABRE_PARENTESES);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case CIFRAO:
        case ABRE_PARENTESES:
        case STRING:
        case NUMERO:
        case VAR:
        case 41:
        case 46:
        case 51:
        case 52:{
          Expressao();
          break;
          }
        default:
          jj_la1[12] = jj_gen;
          ;
        }
        jj_consume_token(FIM);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case CIFRAO:
        case ABRE_PARENTESES:
        case STRING:
        case NUMERO:
        case VAR:
        case 41:
        case 46:
        case 51:
        case 52:{
          Expressao();
          break;
          }
        default:
          jj_la1[13] = jj_gen;
          ;
        }
        jj_consume_token(FIM);
        if (jj_2_8(100)) {
          Expressao();
        } else {
          ;
        }
        break;
        }
      case VAR:{
        jj_consume_token(VAR);
        jj_consume_token(IN);
        jj_consume_token(VAR_ARRAY);
        jj_consume_token(FECHA_PARENTESES);
        Declaracao();
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("D_loop");
    }
  }

  final public void D_control() throws ParseException {
    trace_call("D_control");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CONTINUE:{
        jj_consume_token(CONTINUE);
        break;
        }
      case BREAK:{
        jj_consume_token(BREAK);
        break;
        }
      case RETURN:{
        jj_consume_token(RETURN);
        if (jj_2_9(100)) {
          Expressao();
        } else {
          ;
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case FIM:{
          jj_consume_token(FIM);
          break;
          }
        default:
          jj_la1[15] = jj_gen;
          ;
        }
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("D_control");
    }
  }

  final public void D_lista() throws ParseException {
    trace_call("D_lista");
    try {
      label_4:
      while (true) {
        if (jj_2_10(100)) {
          D_Expressao();
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case EXIT:
          case NEXT:
          case DELETE:
          case PRINT:
          case GETLINE:
          case FUNCAO_MAT:
          case FUNCAO_IO:{
            D_funcao();
            break;
            }
          case IF:{
            D_if();
            break;
            }
          default:
            jj_la1[17] = jj_gen;
            if (jj_2_11(100)) {
              D_loop();
            } else {
              switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
              case CONTINUE:
              case RETURN:
              case BREAK:{
                D_control();
                break;
                }
              default:
                jj_la1[18] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }
            }
          }
        }
        if (jj_2_12(100)) {
          ;
        } else {
          break label_4;
        }
      }
    } finally {
      trace_return("D_lista");
    }
  }

  final public void Expressao() throws ParseException {
    trace_call("Expressao");
    try {
      Exp_and();
      label_5:
      while (true) {
        if (jj_2_13(100)) {
          ;
        } else {
          break label_5;
        }
        jj_consume_token(39);
        Exp_and();
      }
    } finally {
      trace_return("Expressao");
    }
  }

  final public void D_expressao() throws ParseException {
    trace_call("D_expressao");
    try {
      Expressao();
      if (jj_2_14(100)) {
        jj_consume_token(FIM);
      } else {
        ;
      }
    } finally {
      trace_return("D_expressao");
    }
  }

  final public void D_funcao_matematica() throws ParseException {
    trace_call("D_funcao_matematica");
    try {
      jj_consume_token(FUNCAO_MAT);
      jj_consume_token(ABRE_PARENTESES);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CIFRAO:
      case ABRE_PARENTESES:
      case STRING:
      case NUMERO:
      case VAR:
      case 41:
      case 46:
      case 51:
      case 52:{
        Expressao();
        label_6:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 40:{
            ;
            break;
            }
          default:
            jj_la1[19] = jj_gen;
            break label_6;
          }
          jj_consume_token(40);
          Expressao();
        }
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        ;
      }
      jj_consume_token(FECHA_PARENTESES);
    } finally {
      trace_return("D_funcao_matematica");
    }
  }
